--- a/src/page/home/interact/interact.scss
+++ b/src/page/home/interact/interact.scss
@@ -21,6 +21,7 @@
 
   .okp4-dataverse-portal-home-page-interact-card-disabled {
     display: none;
+    justify-content: center;
   }
 
   &:hover {
